--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "thesupersensor.h": "c",
-        "thesupersensor_config.h": "c"
+        "thesupersensor_config.h": "c",
+        "esp8266.h": "c"
     }
 }
